# cw-otc-dex

./: .gitignore  Cargo.toml  NOTICE  README.md  config-overrides.js  index.html  package-lock.json  package.json  tailwind.config.js  webpack.config.js
.circleci/: config.yml
.github/workflows/: Basic.yml  test.yml
SmartContract/: Cargo.toml  README.md
SmartContract/artifacts/: checksums.txt  checksums_intermediate.txt  cw_dotc.wasm
SmartContract/src/: contract.rs  error.rs  msg.rs  state.rs
backend/: config.toml  go.mod  go.sum  main.go  nohup.out
backend/database/: postgres.go
backend/endpoints/: endpoints.go
backend/handler/: dealsHandler.go
backend/types/: types.go
examples/: schema.rs
frontend/: package-lock.json  package.json
frontend/src/: Bid.js  ContractInteractionComponent.js  DealsComponent.js  Profile.js  SetUpNodeLocal.js  index.js  useAllDeals.js
public/: index.html
schema/: bid.json  config.json  deal.json  execute_msg.json  instantiate_msg.json  query_msg.json
src/:  BidItem.js  ActivityItem.js  App.js  App.vue  Bid.js  BidForm.js  BidsOverView.js  ChainInfo.js  CreateDeal.js  CreateDealExecute.js  Deal.js  DealsComponent.js  GetBalance.js  GetClient.js  GetUser.js  IndexPage.js  InputForm.js  Modal.js  MyBidItem.js  PopupNotification.js  Profile.js  contract.rs  error.rs  formstyle.css  helpers.rs  lib.rs  main.js  msg.rs  state.rs  styles.css  tooltip.css
src/api/: axios.js
src/assets/: icons.json
src/components/: Header.js
src/config/: constant.js
src/contractcalls/: executeDeal.js  getAllDeals.js  getBidStore.js  getdeal.js  placeBid.js  withdrawBid.js
tests/: common.rs  integration_tests.rs
(+19 files in other folders)
